Refactored orders